backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
    - host: flask-app.local
      http:
        paths:
          - pathType: Prefix
            path: /backend
            backend:
              service:
                name: flask-app-service
                port:
                  number: 80
          - pathType: Prefix
            path: /frontend
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
